--- a/index.html
+++ b/index.html
@@ -1,11 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="assets/card-icon.png" type="image/x-icon" />
+    <title>Assainment-1</title>
+    <link rel="stylesheet" href="style/style.css" />
+  </head>
+  <body>
+    <!--:: Header Section Start ::-->
+    <head>
+        <nav>
+            <div class="container">
+                <div class="nav_main">
+                    <div class="nav_left">
+                        <h3>Bangladesh 2.0</h3>
+                    </div>
+                    <div class="nav_right">
+                        <button>Sign In</button>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </head>
+    <!--:: Header Section End ::-->
+    <!--:: Main Section Start ::-->
+    <main>
+        <!--:: Hero Section Start ::-->
+        <section class="hero">
+          <div class="container">
+              <div class="hero_main">
+                  <div class="hero_left">
+                      <h4>Bangladesh 2.0</h4>
+                      <h1>Idea , innovation ,
+                          vision and challenges in New Bangladesh.</h1>
+                          <button>Explore New Bangladesh</button>
+                  </div>
+                  <div class="hero_right">
+                      <img src="assets/hero.png" alt="hero">
+                  </div>
+              </div>
+          </div>
+        </section>
+        <!--:: Hero Section End ::-->
+        <!--:: Pillars Section Sart ::-->
+        <section class="pillars">
+            <div class="container">
+                <div class="pillar_title">
+                    <h2 class="common_title">Pillars of "Bangladesh 2.0"</h2>
+                </div>
+                <div class="pillars_main">
+                    <div class="Pillar_Cart">
+                        <div class="">
+                            <img src="assets/card-icon.png" alt="card-icon">
+                        </div>
+                        <h3>Innovation</h3>
+                        <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    </div>
+                    <div class="Pillar_Cart">
+                        <div class="">
+                            <img src="assets/card-icon.png" alt="card-icon">
+                        </div>
+                        <h3>Sustainability</h3>
+                        <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    </div>
+                    <div class="Pillar_Cart">
+                        <div class="">
+                            <img src="assets/card-icon.png" alt="card-icon">
+                        </div>
+                        <h3>Infrastructure</h3>
+                        <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    </div>
+                    <div class="Pillar_Cart">
+                        <div class="">
+                            <img src="assets/card-icon.png" alt="card-icon">
+                        </div>
+                        <h3>Empowerment</h3>
+                        <p>Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--:: Pillars Section End ::-->
+        <!--:: Vision Section Start ::-->
+        <section class="vision">
+            <div class="container">
+                <div class="vision_title">
+                    <h2 class="common_title">Pillars of "Bangladesh 2.0"</h2>
+                    <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+                </div>
+                <div class="vision_cart_main">
+                <div class="vision_cart">
+                    <div class="">
+                        <img src="assets/card-icon.png" alt="card_icon">
+                    </div>
+                    <h3>Digital Transformation</h3>
+                    <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button>Learn More</button>
+                </div>
+                <div class="vision_cart">
+                    <div class="">
+                        <img src="assets/card-icon.png" alt="card_icon">
+                    </div>
+                    <h3>Digital Transformation</h3>
+                    <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button>Learn More</button>
+                </div>
+                <div class="vision_cart">
+                    <div class="">
+                        <img src="assets/card-icon.png" alt="card_icon">
+                    </div>
+                    <h3>Digital Transformation</h3>
+                    <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button>Learn More</button>
+                </div>
+            </div>
+            <div class="vision_bottom">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, fugit! Dolorem sequi nihil eos enim saepe veniam odio! Minima dolore consequatur, nesciunt numquam, explicabo consectetur iusto tempore earum laborum animi nulla quia culpa ratione, hic iure illo ipsa dolorum delectus temporibus. Eligendi pariatur est, dolorem quibusdam ullam facilis id quos ipsam, eum officiis perferendis. Explicabo nostrum officia incidunt impedit excepturi ducimus molestias. Odit optio eum rerum, cupiditate sapiente harum asperiores pariatur aspernatur dolorem animi eligendi mollitia, quas accusantium architecto iure tempora temporibus dicta! Possimus accusantium odio sit numquam assumenda placeat esse voluptatum. Nesciunt consequuntur iusto nulla excepturi repellat, eveniet nam repudiandae vel culpa praesentium explicabo tempore nisi enim quas itaque amet omnis labore id deserunt aut. Soluta incidunt vitae repellat inventore ad unde magni nemo dolores aliquam quisquam, dolore necessitatibus molestias mollitia deserunt similique, voluptas perferendis impedit alias sit obcaecati distinctio consequatur officiis. Suscipit cum nemo maiores, excepturi pariatur aut esse incidunt, dolorum quidem culpa eius velit officiis? Quia provident aliquam cumque nesciunt doloremque praesentium recusandae culpa! Tempore consequuntur excepturi, aliquam voluptate, cum repellat cupiditate vel distinctio reiciendis facilis exercitationem eaque dolorum quasi, pariatur dolores culpa aut omnis? Temporibus nulla impedit, modi quam cupiditate similique minima officiis soluta rem aspernatur.</p>
+                <h3></h3>
+                <p></p>
+            </div>
+            </div>
+        </section>
+        <!--:: Vision Section End ::-->
+        <!--:: News Section Start ::-->
+        <section>
+            <div class="container">
+                <div class="news_header">
+                    <h2 class="common_title">Recent News</h2>
+                    <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+                </div>
+            </div>
+        </section>
+        <!--:: News Section End ::-->
+    </main>
+    <!--:: Main Section End ::-->
+    <!--:: Footer Section Start ::-->
+    <footer></footer>
+    <!--:: Footer Section End ::-->
+  </body>
 </html>
