--- a/index.html
+++ b/index.html
@@ -130,6 +130,48 @@
                     <h2 class="common_title">Recent News</h2>
                     <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
                 </div>
+                <div class="news_blog">
+                    <div class="news_blog_1">
+                        <div class="news_blog_left">
+                            <img src="assets/satelite.png" alt="satelite">
+                        </div>
+                        <div class="news_blog_right">
+                            <h2>Bangladesh Launches New Satellite</h2>
+                            <img src="assets/al-jazeera.png" alt="al-jazeera">
+                            <h5>Date: 05/01/2025 Time: 10.25 PM</h5>
+                            <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                                with a certain degree of justification, be able to speak of humankind as civilized</p>
+                                <button>Read More</button>
+                        </div>
+                    </div>
+                    <div class="news_blog_1">
+
+                        <div class="news_blog_right">
+                            <h2>Bangladesh Launches New Satellite</h2>
+                            <img src="assets/al-jazeera.png" alt="al-jazeera">
+                            <h5>Date: 05/01/2025 Time: 10.25 PM</h5>
+                            <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                                with a certain degree of justification, be able to speak of humankind as civilized</p>
+                                <button>Read More</button>
+                        </div>
+                        <div class="news_blog_left">
+                            <img src="assets/satelite.png" alt="satelite">
+                        </div>
+                    </div>
+                    <div class="news_blog_1">
+                        <div class="news_blog_left">
+                            <img src="assets/satelite.png" alt="satelite">
+                        </div>
+                        <div class="news_blog_right">
+                            <h2>Bangladesh Launches New Satellite</h2>
+                            <img src="assets/al-jazeera.png" alt="al-jazeera">
+                            <h5>Date: 05/01/2025 Time: 10.25 PM</h5>
+                            <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                                with a certain degree of justification, be able to speak of humankind as civilized</p>
+                                <button>Read More</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!--:: News Section End ::-->
