--- a/index.html
+++ b/index.html
@@ -123,8 +123,43 @@
             </div>
         </section>
         <!--:: Vision Section End ::-->
+        <!--:: Opinion Section Start ::-->
+        <section class="Opinion">
+            <div class="container">
+                <h2 class="common_title">
+                    Your Opinion Matters
+                </h2>
+                <div class="opinion_content">
+                    <div class="opinion_colum">
+                        <div class="">Questions</div>
+                        <div class="">Select Your Opinion</div>
+                    </div>
+                    <div class="opinion_colum_1">
+                        <div class="opinion_colum_left">Do you believe Bangladesh is on the right path toward becoming a developed nation?</div>
+                        <div class="opinion_colum_right">
+                            <select name="" id="">
+                                <option value="">Yes, I Agree </option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="opinion_colum_1">
+                        <div class="opinion_colum_left">Do you believe Bangladesh is on the right path toward becoming a developed nation?</div>
+                        <div class="opinion_colum_right"><select name="" id="">
+                            <option value="">Yes, I Agree </option>
+                        </select></div>
+                    </div>
+                    <div class="opinion_colum_1">
+                        <div class="opinion_colum_left">Do you believe Bangladesh is on the right path toward becoming a developed nation?</div>
+                        <div class="opinion_colum_right"><select name="" id="">
+                            <option value="">Yes, I Agree </option>
+                        </select></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--:: Opinion Section End ::-->
         <!--:: News Section Start ::-->
-        <section>
+        <section class="new">
             <div class="container">
                 <div class="news_header">
                     <h2 class="common_title">Recent News</h2>
